# ba-readmission-prediction

./: .dockerignore  .env.docker.example  .gitignore  Dockerfile.app  Dockerfile.pipeline  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: callbacks.py  data_loader.py  explainer.py  iframe_test.html  layout.py  main.py  ui.py
app/assets/: custom.css
app/components/: __init__.py  export_buttons.py  model_quality.py  patient_data_card.py  patient_selector.py  risk_card.py  shap_waterfall.py  what_if_sliders.py
data/processed/: shap_test.npy  shap_test_base.npy  test.parquet  train.parquet  val.parquet
infra/nginx/: default.conf
models/: baseline.pkl  catboost_final.cbm
notebooks/: readmission_analysis.ipynb
reports/: metrics.json
scripts/: 01_download.py  01b_eda.py  02_preprocess.py  03_train_baseline.py  04_train_rf.py  05_train_catboost.py  05b_train_lightgbm.py  05c_train_xgboost.py  06_calibrate.py  07_explain_shap.py  08_evaluate_all.py
src/: config.py
src/data/: __init__.py  download.py  eda.py  preprocess.py
src/explain/: __init__.py  shap_analysis.py
src/features/: __init__.py  build.py
src/models/: __init__.py  baseline.py  calibration.py  catboost_model.py  evaluate.py  lightgbm_model.py  random_forest.py  xgboost_model.py
src/utils/: __init__.py  io.py
