[project]
name = "readmission-prediction"
version = "0.1.0"
description = "30-day hospital readmission prediction — CatBoost + SHAP."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "N"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]
